--- a/알고리즘 정리/정렬 알고리즘.md
+++ b/알고리즘 정리/정렬 알고리즘.md
@@ -246,6 +246,7 @@ public static int[] quickSort(int[] arr, int start, int end) {
 ## 거품 정렬(bubble sort)
 
 * 두 인접한 원소를 검사하여 정렬
+* 끝부터 정렬됨
 * 최선 ![O(n)](https://wikimedia.org/api/rest_v1/media/math/render/svg/34109fe397fdcff370079185bfdb65826cb5565a)평균![O(n^{2})](https://wikimedia.org/api/rest_v1/media/math/render/svg/6cd9594a16cb898b8f2a2dff9227a385ec183392) 최악![O(n^{2})](https://wikimedia.org/api/rest_v1/media/math/render/svg/6cd9594a16cb898b8f2a2dff9227a385ec183392)
 
 ```java
