--- a/알고리즘 정리/자바 자료구조.md
+++ b/알고리즘 정리/자바 자료구조.md
@@ -2,6 +2,8 @@
 
 * 자바에서 제공하는 자료구조를 담당하는 프레임워크
 
+![](https://static.javatpoint.com/images/java-collection-hierarchy.png)
+
 ## List
 
 - 순서를 유지하고 저장함. 중복 저장 가능.
@@ -30,6 +32,21 @@ list.clear(); //모든 데이터 삭제
 
 list.size(); //데이터 개수 확인
 System.out.println(list); //전체 데이터 출력
+```
+
+
+
+## Stack
+
+* vector 상속받음
+
+```java
+Stack<Integer> stack = new Stack<>();
+if(!stack.empty()){	//스택 비었는지 체크 --> pop, peek은 비어있으면 오류남
+    stack.pop();	//끝 데이터 출력하고 삭제
+	stack.peek();	//끝 데이터 출력
+}
+stack.push(data);	//데이터 삽입
 ```
 
 
