--- a/알고리즘 정리/자바 자료구조.md
+++ b/알고리즘 정리/자바 자료구조.md
@@ -66,15 +66,25 @@ queue.element(); //맨 앞 데이터 반환
 queue.peek();	//맨 앞 데이터 반환 & queue 비었으면 null 반환
 queue.remove();	//맨 앞 데이터 반환 & 삭제
 queue.poll();	//맨 앞 데이터 반환 & 삭제 & queue 비었으면 null 반환
-queue.offer(data);	//data를 queue에 삽입
+queue.offer(data);	//data를 queue에 삽입 & 공간없으면 null 반환
+queue.add(data); 	//data를 queue에 삽입 & 공간없으면 exception
 ```
 
-| 이름          | 설명 |
-| ------------- | ---- |
-| BlockingDeque |      |
-| BlockingQueue |      |
-| Deque         |      |
-| TransferQueue |      |
+
+
+## PriorityQueue
+
+* 우선순위대로 처리하는 Queue
+* 내부구조는 힙으로 구성(이진트리) --> 시간복잡도 O(n log n)
+
+```java
+//우선 순위 낮은 순
+PriorityQueue<Integer> priorityQueue = new PriorityQueue<>();
+//우선 순위 높은 순
+PriorityQueue<Integer> priorityQueue = new PriorityQueue<>(Collections.reverseOrder());
+```
+
+
 
 
 
