--- a/알고리즘 정리/자바 자료구조.md
+++ b/알고리즘 정리/자바 자료구조.md
@@ -76,6 +76,7 @@ queue.add(data); 	//data를 queue에 삽입 & 공간없으면 exception
 
 * 우선순위대로 처리하는 Queue
 * 내부구조는 힙으로 구성(이진트리) --> 시간복잡도 O(n log n)
+* 내부 정렬 -- 안정정렬 아닌 것 주의!
 
 ```java
 //우선 순위 낮은 순
@@ -83,8 +84,6 @@ PriorityQueue<Integer> priorityQueue = new PriorityQueue<>();
 //우선 순위 높은 순
 PriorityQueue<Integer> priorityQueue = new PriorityQueue<>(Collections.reverseOrder());
 ```
-
-
 
 
 
