--- a/알고리즘 정리/자바 자료구조.md
+++ b/알고리즘 정리/자바 자료구조.md
@@ -98,7 +98,7 @@ PriorityQueue<Integer> priorityQueue = new PriorityQueue<>(Collections.reverseOr
 Deque<Integer> stack = new ArrayDeque<>();
 
 //queue처럼
-Deque<Integer> queue = new ArryaDeque<>();
+Deque<Integer> queue = new ArrayDeque<>();
 ```
 * deque method
 
