--- a/알고리즘 정리/정렬 알고리즘.md
+++ b/알고리즘 정리/정렬 알고리즘.md
@@ -201,7 +201,7 @@ public void downheap() {
 
 1. 리스트 가운데서 하나의 원소(피벗)를 고른다.
 2. 피벗 앞에는 피벗보다 값이 작은 원소가 오고, 피벗 뒤에는 피벗보다 값이 큰 원소들이 오도록 피벗을 기준으로 리스트를 둘로 나눈다. 분할을 마친 뒤에 피벗은 더이상 움직이지 않는다.
-3. 분할된 두 개의 작은 리스트에 대해 재귀적으로 리스트의 크기가 0이나 1이될 때까지 이 과정을 반복한다. 
+3. 분할된 두 개의 작은 리스트에 대해 재귀적으로 리스트의 크기가 0이나 1이 될 때까지 이 과정을 반복한다. 
 
 ```java
 public static int[] quickSort(int[] arr, int start, int end) {
@@ -262,6 +262,30 @@ public static int[] bubbleSort(int[] arr) {
 		}
 	}
 	return arr;
+}
+```
+
+
+
+## 카운팅 정렬(Counting sort)
+
+- 데이터끼리 서로 비교하지 않고 동일한 값이 몇 번 나왔는지 셈
+- 최대값+1만큼의 길이가 필요 -> 메모리 낭비
+
+```java
+public static void countingSort(int[] arr){
+    int[] store = new int[MAX_VALUE];
+    int max = MIN_VALUE;
+    for(int i=0;i<arr.length;i++){
+        store[arr[i]]++;
+        if(max<arr[i]) max = arr[i];
+    }
+    
+    for(int i=MIN_VALUE;i<max;i++){
+        for(int j=0;j<store[i];j++){
+            System.out.println(i);
+        }
+    }
 }
 ```
 
